# freshManStart

./: .env.example  .gitignore  README.md  graph_snapshot.json  pyproject.toml
.agents/: AGENTS.md
docs/: agent_learning_plan.md  knowledge_map.md  technical_design_v2.md  tool_runner_workflow.html  week_10_langgraph_core.md  week_11_langgraph_advanced.md  week_12_planning_and_reflection.md  week_13_mcp_and_tools.md  week_14_context_engineering.md  week_15_eval_system.md  week_16_observability.md  week_17_reliability_engineering.md  week_18_containerization_and_deployment.md  week_19_multi_agent_patterns.md  week_1_basics_and_oop.md  week_20_a2a_protocol.md  week_21_supervisor_architecture.md  week_22_harness_guides.md  week_23_harness_constraints.md  week_24_harness_feedback.md  week_25_graduation_project.md  week_26_interview_preparation.md  week_2_pydantic_and_async.md  week_3_llm_and_api.md  week_4_dashboard.html  week_4_prompt_and_http.md  week_5_react_and_tools.md  week_6_embedding_and_vector_db.md  week_7_classic_rag.md  week_8_advanced_retrieval_and_graph.md  week_9_memory_system.md  weekly_practice_summary.md
middlewares/llm_reliability_adapter/: README.md  __init__.py  adapter.py  config.py  facade.py
weekly/w03_llm_and_api/: README.md
weekly/w04_prompt_and_http/: utils.py
weekly/w05_react_and_tools/: week_5_overview.html
weekly/w06_embedding_and_vector_db/: __init__.py  utils.py  week6_knowledge_map.html  week6_overview.html
weekly/w07_classic_rag/: week_7_overview.html
weekly/w08_advanced_retrieval_and_graph/: overview.html  papers.md
(+536 files in other folders)
