[project]
name = "freshman-start-workspace"
version = "0.1.0"
description = "Global workspace for freshmanStart projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "tiktoken>=0.13.0",
]

[tool.uv.workspace]
# 自动将所有子目录识别为工作区成员（如果子目录中含有 pyproject.toml）
members = ["*"]
# 排除非项目文件夹和周练习区
exclude = ["docs", "weekly"]
