[project]
name = "freshman-start-workspace"
version = "0.1.0"
description = "Global workspace for freshmanStart projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "tiktoken>=0.13.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sse-starlette>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "qdrant-client>=1.8.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "networkx>=3.2.0",
    "jieba>=0.42.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
]




[tool.uv.workspace]
# 自动将所有子目录识别为工作区成员（如果子目录中含有 pyproject.toml）
members = ["*"]
# 排除非项目文件夹和周练习区
exclude = ["docs", "weekly"]


